--- a/public/uploadresultsAd.html
+++ b/public/uploadresultsAd.html
@@ -2,93 +2,227 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>📥 Upload Student Results</title>
+  <title>📥 Upload Results (Admin)</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="crrengglogo.png" />
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron&family=Poppins:wght@300;500;700&display=swap" rel="stylesheet" />
   <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #6dd5ed, #2193b0);
-      height: 100vh;
+    :root { --main-color: #3cb6ff; --accent-color: #ff3d3d; }
+    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Poppins', sans-serif; }
+    body { display: flex; min-height: 100vh; background: linear-gradient(to right, #0f2027, #203a43, #2c5364); color: white; }
+
+    .sidebar {
+      width: 260px;
+      background: rgba(60, 66, 84, 0.5);
+      backdrop-filter: blur(8px);
+      padding: 30px 20px;
       display: flex;
-      align-items: center;
-      justify-content: center;
+      flex-direction: column;
+      box-shadow: 4px 0 25px rgba(0, 0, 0, 0.4);
+      position: fixed;
+      height: 100vh;
+      left: 0;
+      top: 0;
+      z-index: 10;
+    }
+
+    .sidebar h2 {
+      text-align: center;
+      font-size: 24px;
+      color: var(--main-color);
+      margin-bottom: 30px;
+    }
+
+    .sidebar ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    .sidebar li {
+      padding: 12px 18px;
+      margin: 12px 0;
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 10px;
+      cursor: pointer;
+      transition: 0.3s ease;
+    }
+
+    .sidebar li:hover {
+      background: var(--main-color);
+      box-shadow: 0 0 12px var(--main-color);
+    }
+
+    .sidebar button {
+      margin-top: auto;
+      padding: 10px 20px;
+      border: none;
+      background: linear-gradient(to right, #ff416c, #ff4b2b);
+      color: white;
+      border-radius: 12px;
+      cursor: pointer;
+      font-weight: bold;
+      box-shadow: 0 0 10px rgba(255, 65, 108, 0.5);
+      transition: 0.3s ease;
+    }
+
+    .sidebar button:hover {
+      transform: scale(1.05);
+    }
+
+    .main {
+      margin-left: 260px;
+      padding: 70px;
+      flex: 1;
+      animation: slideIn 1s ease forwards;
+    }
+
+    .banner {
+      background: rgba(255, 255, 255, 0.08);
+      border-radius: 14px;
+      padding: 16px;
+      font-size: 18px;
+      text-align: center;
+      margin-bottom: 30px;
+      box-shadow: 0 0 15px rgba(0, 191, 255, 0.3);
     }
 
     .card {
-      background: #fff;
+      background: rgba(255, 255, 255, 0.08);
+      backdrop-filter: blur(6px);
       padding: 30px;
       border-radius: 16px;
-      box-shadow: 0 12px 24px rgba(0,0,0,0.15);
+      border: 1px solid rgba(255, 255, 255, 0.15);
       max-width: 500px;
-      width: 100%;
-    }
-
-    h2 {
-      text-align: center;
-      color: #2c3e50;
-      margin-bottom: 20px;
+      margin: auto;
+      animation: fadeUp 0.6s ease forwards;
     }
 
     select, input[type="file"], button {
       width: 100%;
       padding: 12px;
       margin: 12px 0;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      font-size: 14px;
+      border-radius: 10px;
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      background: rgba(255, 255, 255, 0.1);
+      font-size: 15px;
+      color: white;
+      backdrop-filter: blur(4px);
     }
 
-    button {
-      background-color: #3498db;
+    input[type="file"]::file-selector-button {
+      padding: 10px;
+      border-radius: 8px;
+      background: linear-gradient(to right, #3cb6ff, #ff3d3d);
       color: white;
       border: none;
       font-weight: bold;
       cursor: pointer;
-      transition: all 0.2s ease-in-out;
+    }
+
+    button {
+      background: linear-gradient(135deg, var(--main-color), var(--accent-color));
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+      transition: all 0.3s ease;
     }
 
     button:hover {
-      background-color: #2980b9;
-      transform: scale(1.02);
+      transform: scale(1.05);
+      box-shadow: 0 0 18px rgba(255, 61, 61, 0.5);
     }
 
     .footer {
       text-align: center;
       margin-top: 10px;
-      font-size: 12px;
-      color: #888;
+      font-size: 13px;
+      color: #ccc;
     }
+
+    .mobile-toggle {
+      position: fixed;
+      top: 15px;
+      left: 15px;
+      font-size: 26px;
+      z-index: 20;
+      cursor: pointer;
+      display: none;
+      color: white;
+    }
+
+    @media (max-width: 768px) {
+      .sidebar {
+        transform: translateX(-100%);
+        transition: 0.4s ease;
+      }
+      .sidebar.open {
+        transform: translateX(0);
+      }
+      .mobile-toggle {
+        display: block;
+      }
+      .main {
+        margin-left: 0;
+        padding: 80px 20px 20px;
+      }
+    }
+
+    @keyframes fadeUp { to { opacity: 1; transform: translateY(0); } }
+    @keyframes slideIn { from { opacity: 0; transform: translateX(50px); } to { opacity: 1; transform: translateX(0); } }
   </style>
 </head>
 <body>
 
-  <div class="card">
-    <h2>📤 Upload Result PDF</h2>
-    <form id="uploadForm">
-      <label for="semester">📘 Select Semester</label>
-      <select id="semester" required>
-        <option value="">-- Select Semester --</option>
-        <option>1-1</option>
-        <option>1-2</option>
-        <option>2-1</option>
-        <option>2-2</option>
-        <option>3-1</option>
-        <option>3-2</option>
-        <option>4-1</option>
-        <option>4-2</option>
-      </select>
+  <div class="sidebar">
+    <h2>Admin Panel</h2>
+    <ul>
+      <li onclick="navigateTo('uploadresultsAd.html')">📥 Upload Results</li>
+      <li onclick="navigateTo('upload-sbi.html')">📤 Upload SBI References</li>
+      <li onclick="navigateTo('du-match-status.html')">📊 DU Match Status</li>
+      <li onclick="navigateTo('noc-status.html')">📜 NOC Status</li>
+      <li onclick="navigateTo('removestudents.html')">🗑️ Delete Students</li>
+    </ul>
+    <button onclick="logout()">🚪 Logout</button>
+  </div>
 
-      <label for="pdfFile">📎 Choose PDF File</label>
-      <input type="file" id="pdfFile" accept="application/pdf" required />
+  <div class="mobile-toggle" onclick="toggleSidebar()">☰</div>
 
-      <button type="submit">Upload Now</button>
-    </form>
-    <div class="footer">Supported Format: University Result PDFs (Max 5MB)</div>
+  <div class="main">
+    <div class="banner">📥 Upload Result PDF (Admin)</div>
+    <div class="card">
+      <form id="uploadForm">
+        <label for="semester">📘 Select Semester</label>
+        <select id="semester" required>
+          <option value="">-- Select Semester --</option>
+          <option>1-1</option><option>1-2</option>
+          <option>2-1</option><option>2-2</option>
+          <option>3-1</option><option>3-2</option>
+          <option>4-1</option><option>4-2</option>
+        </select>
+
+        <label for="pdfFile">📎 Choose PDF File</label>
+        <input type="file" id="pdfFile" accept="application/pdf" required />
+
+        <button type="submit">Upload Now</button>
+      </form>
+      <div class="footer">Supported Format: University Result PDFs (Max 5MB)</div>
+    </div>
   </div>
 
   <script>
+    function navigateTo(page) {
+      window.location.href = page;
+    }
+
+    function logout() {
+      localStorage.removeItem("userId");
+      window.location.replace("index.html");
+    }
+
+    function toggleSidebar() {
+      document.querySelector('.sidebar').classList.toggle('open');
+    }
+
     document.getElementById("uploadForm").addEventListener("submit", async (e) => {
       e.preventDefault();
 
@@ -97,7 +231,7 @@
       formData.append("pdf", document.getElementById("pdfFile").files[0]);
 
       try {
-        const response = await fetch("http://localhost:3000/admin/upload-result-pdf", {
+        const response = await fetch("https://crr-noc.onrender.com/admin/upload-result-pdf", {
           method: "POST",
           body: formData
         });
@@ -114,6 +248,5 @@
       }
     });
   </script>
-
 </body>
 </html>
