--- a/public/noc-status.html
+++ b/public/noc-status.html
@@ -153,6 +153,7 @@
   <div class="sidebar">
     <h2>Admin Panel</h2>
     <ul>
+      <li onclick="navigateTo('uploadresultsAd.html')">📥 Upload Results</li>
       <li onclick="navigateTo('upload-sbi.html')">📤 Upload SBI References</li>
       <li onclick="navigateTo('du-match-status.html')">📊 DU Match Status</li>
       <li onclick="navigateTo('noc-status.html')">📜 NOC Status</li>
