--- a/public/uploadresultsAd.html
+++ b/public/uploadresultsAd.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>📥 Upload Results (Admin)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="crrengglogo.png" />
   <link href="https://fonts.googleapis.com/css2?family=Orbitron&family=Poppins:wght@300;500;700&display=swap" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <style>
-    :root { --main-color: #3cb6ff; --accent-color: #ff3d3d; }
-    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Poppins', sans-serif; }
-    body { display: flex; min-height: 100vh; background: linear-gradient(to right, #0f2027, #203a43, #2c5364); color: white; }
+    :root {
+      --main-color: #3cb6ff;
+      --accent-color: #ff3d3d;
+    }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
+    }
+
+    body {
+      display: flex;
+      min-height: 100vh;
+      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      color: white;
+    }
 
     .sidebar {
       width: 260px;
@@ -35,7 +51,6 @@
 
     .sidebar ul {
       list-style: none;
-      padding: 0;
     }
 
     .sidebar li {
@@ -69,9 +84,20 @@
       transform: scale(1.05);
     }
 
+    .mobile-toggle {
+      position: fixed;
+      top: 15px;
+      left: 15px;
+      font-size: 26px;
+      z-index: 20;
+      cursor: pointer;
+      display: none;
+      color: white;
+    }
+
     .main {
       margin-left: 260px;
-      padding: 70px;
+      padding: 70px 20px;
       flex: 1;
       animation: slideIn 1s ease forwards;
     }
@@ -132,43 +158,34 @@
       box-shadow: 0 0 18px rgba(255, 61, 61, 0.5);
     }
 
-    .footer {
-      text-align: center;
-      margin-top: 10px;
-      font-size: 13px;
-      color: #ccc;
-    }
-
-    .mobile-toggle {
-      position: fixed;
-      top: 15px;
-      left: 15px;
-      font-size: 26px;
-      z-index: 20;
-      cursor: pointer;
-      display: none;
-      color: white;
-    }
-
     @media (max-width: 768px) {
       .sidebar {
         transform: translateX(-100%);
         transition: 0.4s ease;
       }
+
       .sidebar.open {
         transform: translateX(0);
       }
+
       .mobile-toggle {
         display: block;
       }
+
       .main {
         margin-left: 0;
-        padding: 80px 20px 20px;
+        padding-top: 90px;
       }
     }
 
-    @keyframes fadeUp { to { opacity: 1; transform: translateY(0); } }
-    @keyframes slideIn { from { opacity: 0; transform: translateX(50px); } to { opacity: 1; transform: translateX(0); } }
+    @keyframes fadeUp {
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes slideIn {
+      from { opacity: 0; transform: translateX(50px); }
+      to { opacity: 1; transform: translateX(0); }
+    }
   </style>
 </head>
 <body>
@@ -203,9 +220,8 @@
         <label for="pdfFile">📎 Choose PDF File</label>
         <input type="file" id="pdfFile" accept="application/pdf" required />
 
-        <button type="submit">Upload Now</button>
+        <button type="submit" id="submitBtn">Upload PDF</button>
       </form>
-      <div class="footer">Supported Format: University Result PDFs (Max 5MB)</div>
     </div>
   </div>
 
@@ -223,12 +239,32 @@
       document.querySelector('.sidebar').classList.toggle('open');
     }
 
-    document.getElementById("uploadForm").addEventListener("submit", async (e) => {
+    const form = document.getElementById("uploadForm");
+    const submitBtn = document.getElementById("submitBtn");
+
+    form.addEventListener("submit", async (e) => {
       e.preventDefault();
+      const semester = document.getElementById("semester").value;
+      const file = document.getElementById("pdfFile").files[0];
+
+      if (!semester || !file) {
+        Swal.fire("Missing Details", "Please select semester and upload a PDF", "warning");
+        return;
+      }
 
       const formData = new FormData();
-      formData.append("semester", document.getElementById("semester").value);
-      formData.append("pdf", document.getElementById("pdfFile").files[0]);
+      formData.append("semester", semester);
+      formData.append("pdf", file);
+
+      submitBtn.disabled = true;
+
+      Swal.fire({
+        title: "Uploading...",
+        html: "Processing file. Please wait...",
+        allowOutsideClick: false,
+        allowEscapeKey: false,
+        didOpen: () => Swal.showLoading()
+      });
 
       try {
         const response = await fetch("https://crr-noc.onrender.com/admin/upload-result-pdf", {
@@ -237,14 +273,20 @@
         });
 
         const result = await response.json();
-        if (result.success) {
-          alert(result.message || "✅ Upload successful!");
-        } else {
-          alert("❌ Upload failed: " + (result.message || "Unknown error"));
-        }
+
+        Swal.fire({
+          icon: result.success ? "success" : "warning",
+          title: result.success ? "Upload Successful ✅" : "No Valid Records ⚠️",
+          text: result.message || "Upload completed.",
+        });
+
+        if (result.success) form.reset();
+
       } catch (error) {
-        console.error("Network error:", error);
-        alert("❌ Server connection failed. Please try again.");
+        console.error("❌ Upload failed:", error);
+        Swal.fire("Upload Failed ❌", error.message || "Something went wrong.", "error");
+      } finally {
+        submitBtn.disabled = false;
       }
     });
   </script>
