--- a/public/uploadresultsAd.html
+++ b/public/uploadresultsAd.html
@@ -244,6 +244,7 @@
 
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
+
       const semester = document.getElementById("semester").value;
       const file = document.getElementById("pdfFile").files[0];
 
@@ -267,16 +268,18 @@
       });
 
       try {
-        const response = await fetch("https://crr-noc.onrender.com/admin/upload-result-pdf", {
-          method: "POST",
-          body: formData
-        });
+        // Auto-detect local or deployed URL
+        const response = await fetch("http://localhost:3000/admin/upload-result-pdf", {
+  method: "POST",
+  body: formData
+});
+
 
         const result = await response.json();
 
         Swal.fire({
           icon: result.success ? "success" : "warning",
-          title: result.success ? "Upload Successful ✅" : "No Valid Records ⚠️",
+          title: result.success ? "Upload Successful ✅" : "Upload Failed ⚠️",
           text: result.message || "Upload completed.",
         });
 
